tests/ui/error-codes/E0415.stderr
error[E0415]: identifier `f` is bound more than once in this parameter list
  --> $DIR/E0415.rs:1:16
   |
LL | fn foo(f: i32, f: i32) {}
   |                ^ used as parameter more than once

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0415`.
