tests/ui/error-codes/E0415.rs
fn foo(f: i32, f: i32) {} //~ ERROR E0415

fn main() {
}
